--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -4,4 +4,32 @@ location PATHTOCHANGE {
            rewrite ^ https://$server_name$request_uri? permanent;
        }
        client_max_body_size 10G;
+
+
+        fastcgi_pass    127.0.0.1:SEAHUB_PORT;
+        fastcgi_param   SCRIPT_FILENAME     $document_root$fastcgi_script_name;
+        fastcgi_param   PATH_INFO           $fastcgi_script_name;
+
+        fastcgi_param   SERVER_PROTOCOL     $server_protocol;
+        fastcgi_param   QUERY_STRING        $query_string;
+        fastcgi_param   REQUEST_METHOD      $request_method;
+        fastcgi_param   CONTENT_TYPE        $content_type;
+        fastcgi_param   CONTENT_LENGTH      $content_length;
+        fastcgi_param   SERVER_ADDR         $server_addr;
+        fastcgi_param   SERVER_PORT         $server_port;
+        fastcgi_param   SERVER_NAME         $server_name;
+        fastcgi_param   HTTPS               on;
+
 }
+
+location ~* ^PATHTOCHANGE/media/(.+\.(jpg|jpeg|gif|css|png|js|ico|html|xml|txt|woff|ttf))$ {
+        root ALIASTOCHANGEseafile-server-latest/;
+}
+
+location /seafhttp {
+        rewrite ^/seafhttp(.*)$ $1 break;
+        proxy_pass http://127.0.0.1:SEAFILE_FILESERVER_PORT;
+        client_max_body_size 0;
+}
+
+
