--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -5,11 +5,12 @@ location PATHTOCHANGE {
        }
        client_max_body_size 10G;
 
-
         fastcgi_pass    127.0.0.1:SEAHUB_PORT;
+        include         fastcgi_params;
         fastcgi_param   SCRIPT_FILENAME     $document_root$fastcgi_script_name;
         fastcgi_param   PATH_INFO           $fastcgi_script_name;
 
+        fastcgi_param   REMOTE_USER         $remote_user;
         fastcgi_param   SERVER_PROTOCOL     $server_protocol;
         fastcgi_param   QUERY_STRING        $query_string;
         fastcgi_param   REQUEST_METHOD      $request_method;
@@ -20,6 +21,8 @@ location PATHTOCHANGE {
         fastcgi_param   SERVER_NAME         $server_name;
         fastcgi_param   HTTPS               on;
 
+        access_log      /var/log/nginx/seahub.access.log;
+  	error_log       /var/log/nginx/seahub.error.log;
 }
 
 location ~* ^PATHTOCHANGE/media/(.+\.(jpg|jpeg|gif|css|png|js|ico|html|xml|txt|woff|ttf))$ {
