--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -10,6 +10,7 @@ location PATHTOCHANGE {
         fastcgi_param   SCRIPT_FILENAME     $document_root$fastcgi_script_name;
         fastcgi_param   PATH_INFO           $fastcgi_script_name;
 
+        fastcgi_param   AUTH_USER           $remote_user;
         fastcgi_param   REMOTE_USER         $remote_user;
         fastcgi_param   SERVER_PROTOCOL     $server_protocol;
         fastcgi_param   QUERY_STRING        $query_string;
