--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -24,6 +24,8 @@ location PATHTOCHANGE {
 
         access_log      /var/log/nginx/seahub.access.log;
   	error_log       /var/log/nginx/seahub.error.log;
+
+        include conf.d/yunohost_panel.conf.inc;
 }
 
 location ~* ^PATHTOCHANGE/media/(.+\.(jpg|jpeg|gif|css|png|js|ico|html|xml|txt|woff|ttf))$ {
